--- a/index.html
+++ b/index.html
@@ -2,59 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>象棋小巫师</title>
+  <meta charset="UTF-8">
+  <title>象棋小巫师</title>
 </head>
 
-<body>
-<div style="text-align:center;font-size:28px;font-family:黑体,serif">象棋小巫师</div>
-<div style="height:16px"></div>
-<div style="display: flex;">
-
-    <div style="text-align:center;white-space:nowrap">
-    </div>
-    <span class="td" style="margin-right:10px">
-      <div id="container"></div>
-    </span><span class="td" style="vertical-align:top;width:120px;">
-      <div style="text-align:left">
-        <div class="label">谁先走</div>
-        <div><select id="selMoveMode" size="3">
-            <option selected value="0">我先走</option>
-            <option value="1">电脑先走</option>
-            <option value="2">不用电脑</option>
-          </select></div>
-        <div class="label">先走让子</div>
-        <div><select id="selHandicap" style="padding:0">
-            <option selected value="0">不让子</option>
-            <option value="1">让左马</option>
-            <option value="2">让双马</option>
-            <option value="3">让九子</option>
-          </select></div>
-        <div style="padding-top:2px"><input type="button" class="button" value="重新开始"
-                                            onclick="restart_click()"></div>
-        <div style="padding-top:2px"><input type="button" class="button" value="悔棋" onclick="retract_click()"></div>
-        <div style="height:12px"></div>
-        <div class="label">电脑水平</div>
-        <div><select id="selLevel" size="3" onchange="level_change()">
-            <option selected value="0">入门</option>
-            <option value="1">业余</option>
-            <option value="2">专业</option>
-          </select></div>
-        <div style="height:12px"></div>
-        <div><input type="checkbox" class="checkbox" id="chkAnimated" checked onclick="board.animated = checked"><label
-                for="chkAnimated">动画</label></div>
-        <div><input type="checkbox" class="checkbox" id="chkSound" checked onclick="board.setSound(checked)"><label
-                for="chkSound">音效</label></div>
-        <div style="height:60px"></div>
-        <div class="label">步骤</div>
-        <div><select id="selMoveList" size="10" style="font-family:宋体,serif" onchange="moveList_change()">
-            <option selected value="0">=== 开始 ===</option>
-          </select></div>
-      </div>
-    </span>
-</div>
-<script type="module" src="./src/index.ts">
-</script>
-</body>
+<body></body>
+<script type="module" src="./src/main.tsx"></script>
 
 </html>
