refactor: migrate UI to React and update game initialization and asset management.

--- a/index.html
+++ b/index.html
@@ -3,43 +3,50 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>象棋小巫师</title>
   <style>
     /* Reset default browser styles */
     * {
       box-sizing: border-box;
     }
-    html, body {
+
+    html,
+    body {
       margin: 0;
       padding: 0;
       width: 100vw;
       height: 100vh;
-      overflow: hidden; /* Prevent scrolling */
-      touch-action: none; /* Disable browser touch actions like pinch-zoom */
+      overflow: hidden;
+      /* Prevent scrolling */
+      touch-action: none;
+      /* Disable browser touch actions like pinch-zoom */
     }
 
     body {
-        /* background-color will be set by JavaScript */
-        /* background-color: var(--bg-color); */
-        display: flex; /* Added flex to body for explicit centering of canvas if excalibur does not */
-        justify-content: center;
-        align-items: center;
+      /* background-color will be set by JavaScript */
+      /* background-color: var(--bg-color); */
+      display: flex;
+      /* Added flex to body for explicit centering of canvas if excalibur does not */
+      justify-content: center;
+      align-items: center;
     }
+
     /* Remove specific canvas styling that might restrict size or add borders */
     canvas {
-        display: block;
-        /* Excalibur will manage width/height/position */
-        /* Optional: Remove the default box-shadow and border-radius to get a full-screen, flat look */
-        /* box-shadow: none; */
-        /* border-radius: 0; */
+      display: block;
+      /* Excalibur will manage width/height/position */
+      /* Optional: Remove the default box-shadow and border-radius to get a full-screen, flat look */
+      /* box-shadow: none; */
+      /* border-radius: 0; */
     }
   </style>
 </head>
 
 <body>
-  <canvas id="game" onContextMenu="event.preventDefault()"></canvas>
-  <script type="module" src="./src/main.ts"></script>
+  <div id="game"></div>
+  <script type="module" src="./src/main.tsx"></script>
 </body>
 
 </html>
